--- a/emacs.d/config.org
+++ b/emacs.d/config.org
@@ -1002,7 +1002,7 @@ Return a list of strings as the completion candidates."
   (git-gutter:added ((t (:background "#50fa7b"))))
   (git-gutter:deleted ((t (:background "#ff79c6"))))
   :config
-  (global-git-gutter-mode +1))
+  (global-git-gutter-mode t))
 #+end_src
 ** gitignore-mode
 #+BEGIN_SRC emacs-lisp
