--- a/emacs.d/config.org
+++ b/emacs.d/config.org
@@ -117,8 +117,8 @@ Replease the active region just by typing test, just like modern text editors
 #+end_src
 ** font
 #+begin_src emacs-lisp
-  (add-to-list 'default-frame-alist '(font . "Iosevka-14"))
-  (setq-default line-spacing 3)
+(add-to-list 'default-frame-alist '(font . "Iosevka-14"))
+(setq-default line-spacing 1)
 
 ;; Underline looks a bit better when drawn lower
 (setq x-underline-at-descent-line t)
@@ -789,11 +789,13 @@ Documentation popups for company
 ** flycheck
 #+begin_src emacs-lisp
 (use-package flycheck
-  :ensure t
   :init (global-flycheck-mode)
   :config
   (flycheck-add-mode 'javascript-eslint 'js-mode)
-  )
+  :custom
+  (flycheck-check-syntax-automatically '(save mode-enable))
+  (flycheck-idle-change-delay 4)
+  (flycheck-display-errors-delay .3))
 #+end_src
 ** lsp-mode + lsp-ui + company-lsp + lsp-ivy
 #+begin_src emacs-lisp
